--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon appli</title>
-    <!-- animated on scroll -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>BERRY VAULT</title>
+      <!-- animated on scroll -->
+      <link rel="shortcut icon" href="https://i.ibb.co/KskyLnt/icons8-fingerprint-100.png" type="image/svg+xml"></link>
+      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         
-    <title>Gestion</title>
-    
-    <script src="https://cdn.tailwindcss.com"></script>
-    
-    <script src="https://kit.fontawesome.com/580982fca5.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-    
-    <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-
-</head>
+      
+      
+      <script src="https://cdn.tailwindcss.com"></script>
+      
+      <script src="https://kit.fontawesome.com/580982fca5.js" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+      
+      <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  </head>
 <body>
 <!-- component -->
 <!-- This is an example component -->
@@ -37,10 +36,10 @@
                       <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
                    </svg>
                 </button>
-                <div>
+                <div class="flex">
                   <a href="#" class="text-xl font-bold flex items-center lg:ml-2.5">
-                     <img class="pr-2" width="30" height="30" src="https://img.icons8.com/ios-glyphs/60/fingerprint.png" alt="fingerprint"/>
-                  <span class="font-mono pt-[2px]">BERRY VAULT</span>
+                  <img class="hidden sm:flex w-7" src="https://img.icons8.com/ios-filled/50/000000/fingerprint.png" alt="Icon">
+                  <span class="pl-2">BERRY VAULT</span>
                 </div>
                 
                 </a>
@@ -59,20 +58,16 @@
              <div class="flex items-center">
                 <button id="toggleSidebarMobileSearch" type="button" class="lg:hidden text-gray-500 hover:text-gray-900 hover:bg-gray-100 p-2 rounded-lg">
                    <span class="sr-only">Search</span>
-                   <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
-                   </svg>
                 </button>
-                <div class="hidden lg:flex items-center">
-                   <span class="text-base font-normal text-gray-500 mr-5">Open source ❤️</span>
-                   <div class="-mb-1">
-                      
-                   </div>
+                <div class="flex items-center pr-5 rounded-xl bg-[#D8DEE9] p-2.5">
+                <div class="w-10 h-10 rounded-full text-center flex flex-col justify-center shadow-inner bg-[#9caedf]">
+                   <p class="text-[25px] pt-1 uppercase font-semibold">{{ user_name[0] }}</p>
                 </div>
-                <a href="/login" class="hidden sm:inline-flex ml-5 text-white bg-[#434C5E] hover:bg-[#2E3440] focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mr-3">
+                <p class="pl-2 pt-0.5 uppercase text-[18px] font-mono lg:pr-5 ">{{ user_name }}</p>
+                <a href="/login" class="hidden lg:block  text-white focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center drop-shadow-md transition ease-in-out delay-150 bg-[#434C5E]  hover:bg-[#BF616A] duration-300">
                   <i class="fa-solid fa-right-from-bracket pr-2" style="color: #ffffff;"></i>
                    Disconnect 
-                </a>
+               </a>
              </div>
           </div>
        </div>
@@ -84,10 +79,16 @@
                 <div class="flex-1 px-3 bg-white divide-y space-y-1">
                    <ul class="space-y-2 pb-2">
                       <li>
+                        <div class="pt-5 lg:hidden">
+                           <a href="/login" class="lg:hidden sm:inline-flex  text-white focus:ring-4  focus:ring-cyan-200 font-medium rounded-lg text-sm  pl-[65px] pr-[67px] py-2.5 text-center items-center drop-shadow-md transition ease-in-out delay-150 bg-[#434C5E]  hover:bg-[#BF616A] duration-300">
+                              <i class="fa-solid fa-right-from-bracket pr-2" style="color: #ffffff;"></i>
+                              Disconnect 
+                           </a>
+                        </div>
                          <form action="#" method="GET" class="lg:hidden">
                             <label for="mobile-search" class="sr-only">Search</label>
-                            <div class="relative">
-                               <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                            <div class="relative pt-4">
+                               <div class="absolute inset-y-0 left-0 pl-3 pt-4 flex items-center pointer-events-none">
                                   <svg class="w-5 h-5 text-gray-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                      <path d="M5 3a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2V5a2 2 0 00-2-2H5zM5 11a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2v-2a2 2 0 00-2-2H5zM11 5a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V5zM11 13a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path>
                                   </svg>
@@ -96,25 +97,26 @@
                             </div>
                          </form>
                       </li>
-                     <li>
-                        <a href="#" class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group">
+                      <li>
+                        <a href="#" class="text-base text-gray-900 font-normal rounded-lg  flex items-center p-2 hover:bg-gray-100 group">
                            <i class="fa-solid fa-lock text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" ></i>
-                           <span class="ml-3">Password Manager</span>
+                           <span class="ml-3">All Passwords</span>
                         </a>
                      </li>
                      <li>
-                        <a href="#" class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group">
-                           <i class="fa-solid fa-user text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"></i>
-                           <span class="ml-3">Profil</span>
-                        </a>
                      </li>
                    </ul>
                    <div class="space-y-2 pt-2">
-                      <a href="#" target="_blank" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 group transition duration-75 flex items-center p-2">
-                        <i class="fa-solid fa-question text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"></i>
-                        <span class="ml-3">How to use</span>
+                      <a href="#" target="" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 group transition duration-75 flex items-center p-2">
+                       
+                        <i class="fa-solid fa-arrows-rotate text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"></i>
+                        <span class="ml-3">Passwords Generator</span>
                       </a>
-                      
+                      <a href="#" target="" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 group transition duration-75 flex items-center p-2">
+                       
+                        <i class="fa-solid fa-star text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"></i>
+                        <span class="ml-3">Favorite passwords</span>
+                      </a>
                    </div>
                 </div>
              </div>
@@ -125,7 +127,7 @@
           <main>
              <div class="pt-6 px-4">
                 <div class="grid grid-cols-1 2xl:grid-cols-2 xl:gap-4 my-4">
-                   <div class="bg-white shadow rounded-lg mb-4 p-4 sm:p-6 lg:h-[814px]  overflow-hidden">
+                   <div class="bg-white shadow rounded-lg mb-4 p-4 sm:p-6 lg:h-[814px] overflow-auto">
                       <div class="flex items-center justify-between pb-5">
                          <h3 class="text-xl font-bold leading-none text-gray-900">Passwords list</h3>
                          <a href="/add_password" class="text-white drop-shadow-md bg-[#3B4252] hover:bg-[#3b425296] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5" onclick="show_add_password()"><i class="fa-solid fa-plus pr-2" style="color: #ffffff;"></i> Add password</a>
@@ -150,7 +152,7 @@
                                     <div class="inline-flex items-center text-base font-semibold text-gray-900">
                                        
                                     </div>
-                                    <div class="space-x-1">
+                                    <div class="hidden sm:block text-truncate space-x-1">
                                        <button href="#" type="button" class="text-black  bg-[#D08770] hover:bg-[#d086709a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-pencil" style="color: #000000;"></i></button>
                                        <button type="button" class="text-black  bg-[#A3BE8C] hover:bg-[#a3be8c8a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-circle-user" style="color: #000000;"></i></button>
                                        <button type="button" class="text-black  bg-[#8FBCBB] hover:bg-[#8fbcbb9d] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-key" style="color: #000000;"></i></button>
@@ -158,6 +160,13 @@
 
                                        
                                     </div>
+
+                                 </div>
+                                 <div class="sm:hidden sm:block pt-4 space-x-1">
+                                    <button href="#" type="button" class="text-black  bg-[#D08770] hover:bg-[#d086709a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-pencil" style="color: #000000;"></i></button>
+                                    <button type="button" class="text-black  bg-[#A3BE8C] hover:bg-[#a3be8c8a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-circle-user" style="color: #000000;"></i></button>
+                                    <button type="button" class="text-black  bg-[#8FBCBB] hover:bg-[#8fbcbb9d] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-key" style="color: #000000;"></i></button>
+                                    <button type="button" class="text-black  bg-[#BF616A] hover:bg-[#bf616a94] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-trash-can" style="color: #000000;"></i></button>
                                  </div>
                               </li>
                            {% endfor %}
@@ -192,23 +201,12 @@
                            <label for="site" class="block mb-2 text-sm font-medium text-gray-900 ">Site</label>
                            <input type="text" id="password" class="w-full px-6 py-3 mb-2 border border-slate-600 rounded-lg font-medium" required>
                         </div>
-                        <div class="space-x-2">
+                        <div class="space-x-2 flex">
                            <button href="#" type="button" class="text-black  bg-[#A3BE8C] hover:bg-[#a3be8c8a] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-floppy-disk pr-2" style="color: #000000;"></i> Apply Modifications </button>
                            <button href="#" type="button" class="text-black  bg-[#EBCB8B] hover:bg-[#ebcb8b8c] focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2.5"><i class="fa-solid fa-star pr-2" style="color: #000000;"></i>Add to favorite </button>
-                        </div>
-                        
-                        
-
-
-                        
+                        </div>  
                         </form>
- 
                      </div>
-                      
-                      
-
-
-                      
                       </div>
                    </div>
                 </div>
